2009-01-14  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool_backends/postgres.cc (change_columns):
	When changing column types, only attempt to convert data if
	Field::get_conversion_possible() returns TRUE, otherwise just change
	the column type without trying to convert the data.

	* glom/libglom/connectionpool.cc (change_columns): Added a TODO
	comment about not failing when data could not be converted to the new
	column type.

	* glom/mode_design/fields/box_db_table_definition.cc
	(get_field_definition): Set the glom type explicitely on the result
	field, so that we don't have to guess from the GType.

2009-01-13  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.cc add_column(): Don't set the
	autoincrement field for the newly added column since we do control
	this ourselves in Glom.

2009-01-13  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.h: 
	* glom/libglom/connectionpool.cc: Explain that when changing a table's
	primary key we are changing two columns, in response to Murray's
	previously added TODO comment. Don't compile add_column(),
	drop_column(), change_columns() in client only mode.

	* glom/libglom/connectionpool_backends/postgres.h:
	* glom/libglom/connectionpool_backends/postgres.cc: Added
	postgres-specific code for changing a column's type, to allow
	conversions from/to date and time fields.

	* glom/mode_design/fields/box_db_table_definition.h:
	* glom/mode_design/fields/box_db_table_definition.cc: Removed
	commented-out code that did the same before I moved the functionality
	to the connectionpool backend.

2009-01-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: change_columns(): Added a TODO 
	comment asking why we would ever want to change multiple columns. 
	Changing just one columns would make the function simpler.

2009-01-12  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/connectionpool.h: